--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,24 +1,79 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+	margin: 16px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #fafafa;
+	color: #212121;
+	line-height: 1.5;
 }
 
 input {
-  padding: 8px;
-  font: inherit;
+	padding: 8px;
+	font: inherit;
 }
 
 button {
-  padding: 8px 12px;
-  cursor: pointer;
+	padding: 8px 12px;
+	cursor: pointer;
 }
+/* Task-3 */
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.gallery li {
+	margin: 8px;
+	border: 2px solid gold;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+	transition: transform 0.2s ease-in-out;
+}
+
+.gallery img {
+	max-width: 100%;
+	height: auto;
+	animation: bounce 3s infinite alternate;
+	position: relative;
+	z-index: 1;
+}
+
+.gallery li::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: repeating-linear-gradient(
+		45deg,
+		transparent,
+		transparent 5px,
+		rgba(255, 223, 186, 0.5) 5px,
+		rgba(255, 223, 186, 0.5) 10px
+	);
+	opacity: 0;
+	z-index: 0;
+	transition: opacity 0.2s ease-in-out;
+}
+
+.gallery li:hover::before {
+	opacity: 1;
+}
+
+@keyframes bounce {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(0.9);
+	}
+}
+/* Task-3 */
